<resources>
    <string name="app_name">Messenger</string>
    <string name="entrar">ENTRAR</string>
    <string name="n_o_tem_uma_conta_crie_aqui">Não tem uma conta? Crie aqui!</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="name">Nome</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="foto">Foto</string>
    <string name="logout">Sair</string>
    <string name="contatos">Contatos</string>
    <string name="config">Configurações</string>
    <string name="enviar">Enviar</string>
    <string name="chat">Digite sua mensagem...</string>
    <string name="user_teste">User Teste</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="editar_nome">Editar Nome</string>
    <string name="editar_foto">Editar Foto</string>
    <string name="altera_noe">Altere aqui o seu nome público. Esse nome não altera o seu e-mail de login da aplicação.</string>
    <string name="alterar">Alterar</string>
    <string name="cancelar">Cancelar</string>
    <string name="chamada">Nenhuma chamada foi encontrada.</string>
</resources>