<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterActivity"
    android:background="#C6C6C6">

    <EditText
        android:id="@+id/registerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/login_shapes"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_image"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:background="@drawable/login_shapes"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/registerName"
        app:layout_constraintStart_toStartOf="@+id/registerName"
        app:layout_constraintTop_toBottomOf="@+id/registerName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/login_shapes"
        android:hint="@string/senha"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/registerEmail"
        app:layout_constraintStart_toStartOf="@+id/registerEmail"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_shape"
        android:text="@string/criar_conta"
        app:layout_constraintEnd_toEndOf="@+id/registerPassword"
        app:layout_constraintStart_toStartOf="@+id/registerPassword"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/register_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/foto_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foto"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/register_image"
        app:layout_constraintEnd_toEndOf="@+id/register_image"
        app:layout_constraintStart_toStartOf="@+id/register_image"
        app:layout_constraintTop_toTopOf="@+id/register_image" />

</androidx.constraintlayout.widget.ConstraintLayout>